--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -1,6 +1,8 @@
 twig:
     file_name_pattern: '*.twig'
-    form_themes: ['bootstrap_5_layout.html.twig']
+    form_themes:
+        - 'bootstrap_5_layout.html.twig'
+        - 'form/custom_types.html.twig'
     globals:
         cat_pictures_path: '/uploads/catPictures'
 
